objects/Cliente_do_Cliente__c.object
<CustomObject>
    <fields>
        <fullName>Absolut_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Absolut (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Absolut_Flavors_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Absolut Flavors (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Absolut_Flavors_Frentes__c</fullName>
        <label>Absolut Flavors (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Absolut_Flavors_Precos__c</fullName>
        <label>Absolut Flavors (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Absolut_Flavors_Qtde_Pontos__c</fullName>
        <label>Absolut Flavors (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Absolut_Frentes__c</fullName>
        <label>Absolut (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Absolut_Precos__c</fullName>
        <label>Absolut (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Absolut_Qtde_Pontos__c</fullName>
        <label>Absolut (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Almad_n_Precos__c</fullName>
        <label>Almadén (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Almaden_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Almadén (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Almaden_Frentes__c</fullName>
        <label>Almadén (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Almaden_Qtde_Pontos__c</fullName>
        <label>Almadén (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bacardi_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bacardi (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bacardi_Frentes__c</fullName>
        <label>Bacardi (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bacardi_Precos__c</fullName>
        <label>Bacardi (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bacardi_Qtde_Pontos__c</fullName>
        <label>Bacardi (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balla_12_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Balla 12 (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balla_12_Frente__c</fullName>
        <label>Balla 12 (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balla_12_Pre_o__c</fullName>
        <label>Balla 12 (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balla_12_Qtde_Pontos__c</fullName>
        <label>Balla 12 (Qtde.Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balla_Finest_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Balla Finest (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Balla_Finest_Pre_o__c</fullName>
        <label>Balla Finest (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Balla_Finest_Q_Pontos__c</fullName>
        <label>Balla Finest (Qtde.Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balla_Finest__c</fullName>
        <label>Balla Finest (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bells_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bells (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bells_Precos__c</fullName>
        <label>Bells (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bells_Qtde_Pontos__c</fullName>
        <label>Bells (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Bells__c</fullName>
        <label>Bells (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buchannans_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Buchannans (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Buchannans_Frentes__c</fullName>
        <label>Buchannans (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buchannans_Precos__c</fullName>
        <label>Buchannans (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Buchannans_Qtde_Pontos__c</fullName>
        <label>Buchannans (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CNPJ__c</fullName>
        <formula>Lead__r.cnpj__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNPJ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chandon_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chandon (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chandon_Frentes__c</fullName>
        <label>Chandon (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chandon_Precos__c</fullName>
        <label>Chandon (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chandon_Qtde_Pontos__c</fullName>
        <label>Chandon (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Checklist_de_visita__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist de Visita</label>
        <referenceTo>Checklist_de_visita__c</referenceTo>
        <relationshipLabel>Clientes do Cliente</relationshipLabel>
        <relationshipName>Clientes_do_Cliente</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chivas12__c</fullName>
        <label>Chivas 12 (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chivas_12_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chivas 12 (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chivas_12_Pre_os__c</fullName>
        <label>Chivas 12 (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chivas_12_Qtde_Pontos__c</fullName>
        <label>Chivas 12 (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chivas_18_Confinados__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chivas 18 (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Chivas_18_Frentes__c</fullName>
        <label>Chivas 18 (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Chivas_18_Pre_os__c</fullName>
        <label>Chivas 18 (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Chivas_18_Qtde_Pontos__c</fullName>
        <label>Chivas 18 (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Coment_rios_Extras__c</fullName>
        <label>Comentários Extras</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Coment_rios__c</fullName>
        <label>Comentários</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Descreva_a_Mec_nica_da_Promo_o__c</fullName>
        <label>Descreva a Mecânica da Promoção</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Display_de_Ch_o_Outro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display de Chão Outro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_de_Ch_o_PRB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display de Chão PRB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Encarte_Outro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Encarte Outro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Encarte_PRB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Encarte PRB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freixenet_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Freixenet (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Freixenet_Frentes__c</fullName>
        <label>Freixenet (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freixenet_Precos__c</fullName>
        <label>Freixenet (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Freixenet_Qtde_Pontos__c</fullName>
        <label>Freixenet (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grants_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grants (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grants_Precos__c</fullName>
        <label>Grants (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Grants_Qtde_Pontos__c</fullName>
        <label>Grants (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grants__c</fullName>
        <label>Grants (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Havana_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Havana (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Havana_Frentes__c</fullName>
        <label>Havana (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Havana_Precos__c</fullName>
        <label>Havana (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Havana_Qtde_Pontos__c</fullName>
        <label>Havana (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JW_Black_Label_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JW Black Label (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JW_Black_Label_Frentes__c</fullName>
        <label>JW Black Label (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JW_Black_Label_Pre_os__c</fullName>
        <label>JW Black Label (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JW_Black_Label_Qtde_Pontos__c</fullName>
        <label>JW Black Label (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JW_Red_Label_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JW Red Label (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JW_Red_Label_Precos__c</fullName>
        <label>JW Red Label (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>JW_Red_Label_Qtde_Pontos__c</fullName>
        <label>JW Red Label (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>JW_Red_Label__c</fullName>
        <label>JW Red Label (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jameson_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jameson (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jameson_Frentes__c</fullName>
        <label>Jameson (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jameson_Pontos__c</fullName>
        <label>Jameson (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jameson_Preco__c</fullName>
        <label>Jameson (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jim_Beam_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jim Beam (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jim_Beam_Preco__c</fullName>
        <label>Jim Beam (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jim_Beam_Qtde_Pontos__c</fullName>
        <label>Jim Beam (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jim_Beam__c</fullName>
        <label>Jim Beam (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jose_Cuervo_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jose Cuervo (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Jose_Cuervo_Frentes__c</fullName>
        <label>Jose Cuervo (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jose_Cuervo_Precos__c</fullName>
        <label>Jose Cuervo (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jose_Cuervo_Qtde_Pontos__c</fullName>
        <label>Jose Cuervo (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Clientes do Cliente</relationshipLabel>
        <relationshipName>Clientes_do_Cliente</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marca__c</fullName>
        <label>Marca</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Tailor_Made_Outro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Material Tailor Made Outro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material_Tailor_Made_PRB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Material Tailor Made PRB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material_em_G_ndola_Outro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Material em Gôndola Outro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Material_em_G_ndola_PRB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Material em Gôndola PRB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moet_Chandon_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Moet Chandon (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Moet_Chandon_Frentes__c</fullName>
        <label>Moet Chandon (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Moet_Chandon_Precos__c</fullName>
        <label>Moet Chandon (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Moet_Chandon_Qtde_Pontos__c</fullName>
        <label>Moet Chandon (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Montilla_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Montilla (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Montilla_Frentes__c</fullName>
        <label>Montilla (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Montilla_Precos__c</fullName>
        <label>Montilla (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Montilla_Qtde_Pontos__c</fullName>
        <label>Montilla (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mumm_Cordon_Rouge_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mumm Cordon Rouge (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mumm_Cordon_Rouge_Frentes__c</fullName>
        <label>Mumm Cordon Rouge (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mumm_Cordon_Rouge_Precos__c</fullName>
        <label>Mumm Cordon Rouge (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mumm_Cordon_Rouge_Qtde_Pontos__c</fullName>
        <label>Mumm Cordon Rouge (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mumm_Cuv_e_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Mumm Cuvée (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mumm_Cuvee_Frentes__c</fullName>
        <label>Mumm Cuvée (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mumm_Cuvee_Precos__c</fullName>
        <label>Mumm Cuvée (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mumm_Cuvee_Qtde_Pontos__c</fullName>
        <label>Mumm Cuvée (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Natu_Nobilis_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Natu Nobilis (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Natu_Nobilis_Frentes__c</fullName>
        <label>Natu Nobilis (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Natu_Nobilis_Pre_os__c</fullName>
        <label>Natu Nobilis (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Natu_Nobilis_Qtde_Pontos__c</fullName>
        <label>Natu Nobilis (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nome_do_Visitante__c</fullName>
        <label>Nome do Visitante</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Eight_Frentes__c</fullName>
        <label>Old Eight (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Eight_Precos__c</fullName>
        <label>Old Eight (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Old_Eight_Qtde_Pontos__c</fullName>
        <label>Old Eight (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Old_Eight__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Old Eight (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Olmeca_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Olmeca (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Olmeca_Pre_os__c</fullName>
        <label>Olmeca (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Olmeca_Qtde_Pontos__c</fullName>
        <label>Olmeca (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Olmeca__c</fullName>
        <label>Olmeca (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orloff_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Orloff (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Orloff_Frentes__c</fullName>
        <label>Orloff (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Orloff_Pre_os__c</fullName>
        <label>Orloff (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Orloff_Qtde_Pontos__c</fullName>
        <label>Orloff (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passport_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passport (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Passport_Precos__c</fullName>
        <label>Passport (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Passport_Qtde_Pontos__c</fullName>
        <label>Passport (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Passport__c</fullName>
        <label>Passport (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skyy_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Skyy (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skyy_Frentes__c</fullName>
        <label>Skyy (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Skyy_Precos__c</fullName>
        <label>Skyy (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Skyy_Qtde_Pontos__c</fullName>
        <label>Skyy (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Smirnoff_Black_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smirnoff Black (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Smirnoff_Black_Frentes__c</fullName>
        <label>Smirnoff Black (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Smirnoff_Black_Precos__c</fullName>
        <label>Smirnoff Black (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Smirnoff_Black_Qtde_Pontos__c</fullName>
        <label>Smirnoff Black (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Smirnoff_Red_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Smirnoff Red (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Smirnoff_Red_Frentes__c</fullName>
        <label>Smirnoff Red (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Smirnoff_Red_Precos__c</fullName>
        <label>Smirnoff Red (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Smirnoff_Red_Qtde_Pontos__c</fullName>
        <label>Smirnoff Red (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status_da_Visita_Cliente__c</fullName>
        <formula>Checklist_de_visita__r.Status_da_Visita__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status da Visita Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Teacher_s_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Teacher`s (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Teacher_s_Frentes__c</fullName>
        <label>Teacher`s (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teacher_s_Precos__c</fullName>
        <label>Teacher`s (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Teacher_s_Qtde_Pontos__c</fullName>
        <label>Teacher`s (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Treinamento_de_Consumidores__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Treinamento de Consumidores?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Treinamento_de_Vendedores__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Treinamento de Vendedores?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visibilidade_Outro__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visibilidade Outro</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Visibilidade_PRB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Visibilidade PRB</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>White_Hourse_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>White Hourse (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>White_Hourse_Frentes__c</fullName>
        <label>White Hourse (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>White_Hourse_Pre_os__c</fullName>
        <label>White Hourse (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>White_Hourse_Qtde_Pontos__c</fullName>
        <label>White Hourse (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wyborowa_Confinado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wyborowa (Confinado)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Wyborowa_Frentes__c</fullName>
        <label>Wyborowa (Frentes)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wyborowa_Precos__c</fullName>
        <label>Wyborowa (Preços)</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wyborowa_Qtde_Pontos__c</fullName>
        <label>Wyborowa (Qtde. Pontos)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cliente do Cliente</label>
    <nameField>
        <displayFormat>Cliente-{00000}</displayFormat>
        <label>Cliente do Cliente</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clientes do Cliente</pluralLabel>
    <recordTypes>
        <fullName>BRA_Standard</fullName>
        <active>true</active>
        <description>Brazil standard record type</description>
        <label>BRA Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Nao_alterar_dados_se_visita_encerrada</fullName>
        <active>true</active>
        <description>Nao_alterar_dados_se_visita_encerrada</description>
        <errorConditionFormula>priorvalue(  Status_da_Visita_Cliente__c  ) = &quot;Encerrada&quot;</errorConditionFormula>
        <errorMessage>Não é possível alterar com o status da Visita = Encerrada.</errorMessage>
    </validationRules>
</CustomObject>